--- a/Meeting_Notes/190312.md
+++ b/Meeting_Notes/190312.md
@@ -15,4 +15,9 @@
 
 ![channel_sensitivity](http://www.hep.ph.ic.ac.uk/~kt2015/S5_an_sensitivity.png)
 
-[bayesprob_distribution](http://www.hep.ph.ic.ac.uk/~kt2015/)
+![bayesprob_distribution](http://www.hep.ph.ic.ac.uk/~trz15/BayesProb.png)
+
+![bayesprob_distribution](http://www.hep.ph.ic.ac.uk/~trz15/MovedCloud.png)
+
+![bayesprob_distribution](http://www.hep.ph.ic.ac.uk/~trz15/MovedCloudMasked.png)
+
