Added to meeting notes

--- a/Meeting_Notes/190312.md
+++ b/Meeting_Notes/190312.md
@@ -15,4 +15,29 @@
 
 ![channel_sensitivity](http://www.hep.ph.ic.ac.uk/~kt2015/S5_an_sensitivity.png)
 
-[bayesprob_distribution](http://www.hep.ph.ic.ac.uk/~kt2015/)
+![bayesprob_distribution](http://www.hep.ph.ic.ac.uk/~trz15/BayesProb.png)
+
+### Issue identified with collocation missing some values
+
+![Collocation](http://www.hep.ph.ic.ac.uk/~trz15/PoorCollocation.png)
+![TheoreticalCollocation](http://www.hep.ph.ic.ac.uk/~trz15/NPoleCollocate.png)]
+Seems to be a combination of:
+
+- Irregular latitude / longitude gridding of SLSTR data
+- Irregular CALIOP gridding
+- Cosine approximation to the longitudinal distance
+
+Can be fixed:
+
+- All of the currently collected data is unaffected, i.e. they remain valid matches
+- Would result in roughly between 10% - 30% more data
+
+### Examples of how time difference affects the CALIOP truth
+
+![MovedCloud](http://www.hep.ph.ic.ac.uk/~trz15/MovedCloud.png)
+![MaskedMovedCloud](http://www.hep.ph.ic.ac.uk/~trz15/MovedCloudMasked.png)
+
+### Planing
+
+- Could not find tflearn support for weighted inputs
+- Can achieve weighting by using a custom layer with custom  weights between the input layer and the first original layer
