--- a/Meeting_Notes/190312.md
+++ b/Meeting_Notes/190312.md
@@ -17,7 +17,6 @@
 
 ![bayesprob_distribution](http://www.hep.ph.ic.ac.uk/~trz15/BayesProb.png)
 
-![bayesprob_distribution](http://www.hep.ph.ic.ac.uk/~trz15/MovedCloud.png)
+![MovedCloud](http://www.hep.ph.ic.ac.uk/~trz15/MovedCloud.png)
 
-![bayesprob_distribution](http://www.hep.ph.ic.ac.uk/~trz15/MovedCloudMasked.png)
-
+![MovedCloudMasked](http://www.hep.ph.ic.ac.uk/~trz15/MovedCloudMasked.png)
