--- a/Meeting_Notes/190312.md
+++ b/Meeting_Notes/190312.md
@@ -5,11 +5,12 @@
 ### List of actions completed
 
 - Plotted the ROC curve of the most 'sensitive' channel to the model after shuffling, currently working on data planing.
+- Tried plotting ROC curves as a function  of cloud type, the function we are using does not have enough data in each category (false positive, false negative, true positive, true negative) to do this.
 - Changed all the previous graphs to plot AUC instead of accuracy.
 - Plotted the accuracy as a function of time for the low broken cumulus (there was not enough data to evaluate the AUC)
 - Remade the number of data vs surface type (correct now, see 190305.md).
 - Genralised analysis functions for CNN and SuperModel.
-- Downloaded Bayesian model confidences, less than 50% of the data points have this pararemter (approx. 900 000 data points); the confidences are not uniformly distributed.
+- Downloaded Bayesian model confidences, less than 50% of the data points have this pararemter (approx. 900 000 data points); the confidences are not uniformly distributed. We are currently having difficulty generating ROC curves for these. 
 
 ![broken_cloud](http://www.hep.ph.ic.ac.uk/~kt2015/brk_cld_w_time.png)
 
