--- a/Meeting_Notes/190312.md
+++ b/Meeting_Notes/190312.md
@@ -4,7 +4,8 @@
 
 ### List of actions completed
 
-- Plotted the ROC curve of the most 'sensitive' channel to the model after shuffling, currently working on data planing.
+- Plotted the ROC curve of the most 'sensitive' channel to the model after shuffling, currently working on data planing (see below).
+- Put together model comparison email from Barney and Dan's data.
 - Tried plotting ROC curves as a function  of cloud type, the function we are using does not have enough data in each category (false positive, false negative, true positive, true negative) to do this.
 - Changed all the previous graphs to plot AUC instead of accuracy.
 - Plotted the accuracy as a function of time for the low broken cumulus (there was not enough data to evaluate the AUC)
