--- a/Meeting_Notes/190312.md
+++ b/Meeting_Notes/190312.md
@@ -10,7 +10,7 @@
 - Changed all the previous graphs to plot AUC instead of accuracy.
 - Plotted the accuracy as a function of time for the low broken cumulus (there was not enough data to evaluate the AUC)
 - Remade the number of data vs surface type (correct now, see 190305.md).
-- Genralised analysis functions for CNN and SuperModel.
+- Genralised analysis functions for CNN and SuperModel (comparison plots for next time).
 - Downloaded Bayesian model confidences, less than 50% of the data points have this pararemter (approx. 900 000 data points); the confidences are not uniformly distributed. We are currently having difficulty generating ROC curves for these.
 
 ![broken_cloud](http://www.hep.ph.ic.ac.uk/~kt2015/brk_cld_w_time.png)
