added ROC graphs

--- a/Meeting_Notes/190409.md
+++ b/Meeting_Notes/190409.md
@@ -6,5 +6,27 @@
 
 - ROCs for Artic/Antarctic data
 - ROCs for cloud types
+- Hyperparameter test graphs
 - Satellite orbit masks
-- 
+
+### To do
+
+- Finish hyper-parameter testing
+
+![arctic_antarctic_roc](http://www.hep.ph.ic.ac.uk/~kt2015/arctic_antarctic_roc.png)
+
+![altocumulus_roc](http://www.hep.ph.ic.ac.uk/~kt2015/altocumulus_roc.png)
+
+![altostratus_opaque_roc](http://www.hep.ph.ic.ac.uk/~kt2015/altostratus_opaque_roc.png)
+
+![cirrus_transparent_roc](http://www.hep.ph.ic.ac.uk/~kt2015/cirrus_transparent_roc.png)
+
+![deep_convective_roc](http://www.hep.ph.ic.ac.uk/~kt2015/deep_convective_roc.png)
+
+![low_broken_cumulus_roc](http://www.hep.ph.ic.ac.uk/~kt2015/low_broken_cumulus_roc.png)
+
+![low_overcast_opaque_roc](http://www.hep.ph.ic.ac.uk/~kt2015/low_overcast_opaque_roc.png)
+
+![low_overcast_transparent_roc](http://www.hep.ph.ic.ac.uk/~kt2015/low_overcast_transparent_roc.png)
+
+![transition_stratocumulus_roc](http://www.hep.ph.ic.ac.uk/~kt2015/transition_stratocumulus_roc.png)
