--- a/Meeting_Notes/190409.md
+++ b/Meeting_Notes/190409.md
@@ -6,8 +6,8 @@
 
 - ROCs for Artic/Antarctic data
 - ROCs for cloud types
-- Hyperparameter test graphs
-- Satellite orbit masks
+- Hyperparameter test table
+- Satellite orbit masks (see <http://www.hep.ph.ic.ac.uk/~trz15/RelOrbit2/>)
 
 ### To do
 
