--- a/Meeting_Notes/190416.md
+++ b/Meeting_Notes/190416.md
@@ -10,12 +10,10 @@
 - Hyperparameter test table
 - Satellite orbit masks (see <http://www.hep.ph.ic.ac.uk/~trz15/RelOrbit2/>)
 
-![arctic_antarctic_roc](http://www.hep.ph.ic.ac.uk/~kt2015/arctic_antarctic_roc.png)
+![arctic_antarctic_roc](http://www.hep.ph.ic.ac.uk/~kt2015/Arctic_and_Antarctic_ROC.png)
 
-![ctype_roc](http://www.hep.ph.ic.ac.uk/~kt2015/ctype_roc.png)
+![ctype_roc](http://www.hep.ph.ic.ac.uk/~kt2015/Cloud_type_ROC.png)
 
-![ocean_land_roc](http://www.hep.ph.ic.ac.uk/~kt2015/altostratus_opaque_roc.png)
-
-![cirrus_transparent_roc](http://www.hep.ph.ic.ac.uk/~kt2015/ocean_land_roc.png)
+![ocean_land_roc](http://www.hep.ph.ic.ac.uk/~kt2015/Land_and_ocean_ROC.png)
 
 ![hyperparameter_table](http://www.hep.ph.ic.ac.uk/~kt2015/hyperparameter_table.png)
