--- a/Meeting_Notes/190416.md
+++ b/Meeting_Notes/190416.md
@@ -7,13 +7,43 @@
 - ROC for ocean/land data
 - ROC for Artic/Antarctic data
 - ROC for cloud types
-- Hyperparameter test table
+- Hyperparameter test plots
 - Satellite orbit masks (see <http://www.hep.ph.ic.ac.uk/~trz15/RelOrbit2/>)
 
-![arctic_antarctic_roc](http://www.hep.ph.ic.ac.uk/~kt2015/Arctic_and_Antarctic_ROC.png)
+### ROCs
+
+![arctic_antarctic_roc](http://www.hep.ph.ic.ac.uk/~kt2015/arctic_antarctic_roc.png)
+
+![ocean_land_roc](http://www.hep.ph.ic.ac.uk/~kt2015/land_ocean_roc.png)
 
 ![ctype_roc](http://www.hep.ph.ic.ac.uk/~kt2015/Cloud_type_ROC.png)
 
-![ocean_land_roc](http://www.hep.ph.ic.ac.uk/~kt2015/Land_and_ocean_ROC.png)
+### 3D Hyperparamater plots
 
-![hyperparameter_table](http://www.hep.ph.ic.ac.uk/~kt2015/hyperparameter_table.png)
+Best network:
+
+- hidden layers
+- neurons per layer
+- batch size of
+- dropout
+- learning rate
+
+![hyperparameter_layers_nnum](http://www.hep.ph.ic.ac.uk/~kt2015/hyperparameter_table.png)
+
+![hyperparameter_lr_bs](http://www.hep.ph.ic.ac.uk/~kt2015/hyperparameter_table.png)
+
+![hyperparameter_layers_lr](http://www.hep.ph.ic.ac.uk/~kt2015/hyperparameter_table.png)
+
+![hyperparameter_nnum_bs](http://www.hep.ph.ic.ac.uk/~kt2015/hyperparameter_table.png)
+
+![hyperparameter_layers_bs](http://www.hep.ph.ic.ac.uk/~kt2015/hyperparameter_table.png)
+
+![hyperparameter_nnum_lr](http://www.hep.ph.ic.ac.uk/~kt2015/hyperparameter_table.png)
+
+![hyperparameter_do_lr](http://www.hep.ph.ic.ac.uk/~kt2015/hyperparameter_table.png)
+
+![hyperparameter_nnum_do](http://www.hep.ph.ic.ac.uk/~kt2015/hyperparameter_table.png)
+
+![hyperparameter_do_layers](http://www.hep.ph.ic.ac.uk/~kt2015/hyperparameter_table.png)
+
+![hyperparameter_bs_do](http://www.hep.ph.ic.ac.uk/~kt2015/hyperparameter_table.png)
