Updated meeting notes

--- a/Meeting_Notes/190416.md
+++ b/Meeting_Notes/190416.md
@@ -9,6 +9,7 @@
 - ROC for cloud types
 - Hyperparameter test plots
 - Satellite orbit masks (see <http://www.hep.ph.ic.ac.uk/~trz15/RelOrbit2/>)
+- Preliminary planing results (see <http://www.hep.ph.ic.ac.uk/~trz15/Plane_Prelim.png>)
 
 ### ROCs
 
