--- a/Meeting_Notes/190416.md
+++ b/Meeting_Notes/190416.md
@@ -20,30 +20,6 @@
 
 ### 3D Hyperparamater plots
 
-Best network:
+Computationally expensive, would require a batch run to do properly.
 
-- hidden layers
-- neurons per layer
-- batch size of
-- dropout
-- learning rate
-
-![hyperparameter_layers_nnum](http://www.hep.ph.ic.ac.uk/~kt2015/hyperparameter_table.png)
-
-![hyperparameter_lr_bs](http://www.hep.ph.ic.ac.uk/~kt2015/hyperparameter_table.png)
-
-![hyperparameter_layers_lr](http://www.hep.ph.ic.ac.uk/~kt2015/hyperparameter_table.png)
-
-![hyperparameter_nnum_bs](http://www.hep.ph.ic.ac.uk/~kt2015/hyperparameter_table.png)
-
-![hyperparameter_layers_bs](http://www.hep.ph.ic.ac.uk/~kt2015/hyperparameter_table.png)
-
-![hyperparameter_nnum_lr](http://www.hep.ph.ic.ac.uk/~kt2015/hyperparameter_table.png)
-
-![hyperparameter_do_lr](http://www.hep.ph.ic.ac.uk/~kt2015/hyperparameter_table.png)
-
-![hyperparameter_nnum_do](http://www.hep.ph.ic.ac.uk/~kt2015/hyperparameter_table.png)
-
-![hyperparameter_do_layers](http://www.hep.ph.ic.ac.uk/~kt2015/hyperparameter_table.png)
-
-![hyperparameter_bs_do](http://www.hep.ph.ic.ac.uk/~kt2015/hyperparameter_table.png)
+![hyperparameter_layers_nnum](http://www.hep.ph.ic.ac.uk/~kt2015/layers_neurons.png)
